--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "hbs": "^4.1.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.2",
