--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "quake_deathmatch",
+  "name": "quake",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Schanya",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
-    "hbs": "^4.1.2",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.3.2",
-    "nodemon": "^2.0.14",
-    "sequelize": "^6.8.0",
-    "sequelize-auto": "^0.8.5",
-    "sequelize-cli": "^6.2.0"
+    "mysql2": "^2.3.3-rc.0",
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.9.0",
+    "winston": "^3.3.3"
   }
 }
