--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "express-validator": "^6.13.0",
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3-rc.0",
     "nodemon": "^2.0.15",
     "sequelize": "^6.9.0",
