--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/server.js"
+    "start": "nodemon src/server.js",
+    "test": "start & jest"
   },
   "author": "Schanya",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -20,5 +22,8 @@
     "nodemon": "^2.0.15",
     "sequelize": "^6.9.0",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "jest": "^27.4.7"
   }
 }
