--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/server.js",
-    "test": "start & jest"
+    "test": "jest",
+    "cleareCache": "jest --clearCache"
   },
   "author": "Schanya",
   "license": "ISC",
