--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,7 @@
                 "--inspect-brk",
                 "${workspaceRoot}/node_modules/jest/bin/jest.js",
                 "--runInBand",
+                "--detectOpenHandles",
             ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
