--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/server.js",
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "cleareCache": "jest --clearCache"
   },
   "author": "Schanya",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -25,6 +24,8 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "mocha": "^9.2.0",
+    "supertest": "^6.2.2"
   }
 }
