--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.3-rc.0",
     "nodemon": "^2.0.15",
     "sequelize": "^6.9.0",
